--- a/settings.json
+++ b/settings.json
@@ -19,7 +19,7 @@
     "editor.smoothScrolling": true,
     "editor.fontWeight": "500",
     "editor.cursorBlinking": "expand",
-    "editor.minimap.enabled": true,
+    "editor.minimap.enabled": false,
     "editor.stickyScroll.enabled": false,
     "editor.lineHeight": 2,
     "editor.mouseWheelZoom": true,
@@ -40,16 +40,15 @@
     "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "[scss]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[jsonc]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
     "emmet.includeLanguages": {
         "javascript": "javascriptreact",
         "typescript": "typescriptreact"
     },
+    "[prisma]": {
+        "editor.defaultFormatter": "Prisma.prisma"
+    },
+    "prettier.tabWidth": 4,
+    "prettier.trailingComma": "none",
     "githubPullRequests.terminalLinksHandler": "github",
     "workbench.externalBrowser": "chrome",
     "githubPullRequests.pullBranch": "never",
@@ -57,8 +56,6 @@
     "explorer.confirmDragAndDrop": false,
     "workbench.colorTheme": "GitHub Dark Default",
     "chat.commandCenter.enabled": false,
-    "prettier.tabWidth": 4,
     "reactSnippets.settings.prettierEnabled": true,
-    "prettier.trailingComma": "none",
     "files.autoSave": "afterDelay"
 }
